@@ -10,17 +10,19 @@ import org.springframework.http.MediaType;
 import org.springframework.petmanagement.model.Pet;
 import org.springframework.petmanagement.model.PetType;
 import org.springframework.petmanagement.rest.dto.PetFieldsDto;
-import org.springframework.petmanagement.service.ManagementService;
+import org.springframework.petmanagement.service.PetService;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doThrow;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -35,8 +37,7 @@ class PetRestControllerTests {
     private static final UUID PET_TYPE_ID_INVALID = UUID.fromString("30000000-0000-0000-0000-000000000003");
 
     @Autowired private MockMvc mockMvc;
-    @MockitoBean private ManagementService managementService;
-
+    @MockitoBean private PetService petService;
     @Autowired private ObjectMapper objectMapper;
 
     private Pet pet;
@@ -53,7 +54,6 @@ class PetRestControllerTests {
         pet.setName("Rosy");
         pet.setBirthDate(LocalDate.now());
         pet.setType(petType);
-        
     }
 
     private PetFieldsDto createValidFieldsDto() {
@@ -67,11 +67,9 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testUpdatePetSuccess() throws Exception {
-        given(this.managementService.findPetById(PET_ID)).willReturn(Optional.of(pet));
-        given(this.managementService.findPetTypeById(PET_TYPE_ID)).willReturn(Optional.of(petType));
+        given(this.petService.updatePet(eq(PET_ID), any(PetFieldsDto.class))).willReturn(pet);
 
-        PetFieldsDto fieldsDto = createValidFieldsDto();
-        String jsonBody = objectMapper.writeValueAsString(fieldsDto);
+        String jsonBody = objectMapper.writeValueAsString(createValidFieldsDto());
 
         this.mockMvc.perform(put("/api/pets/{id}", PET_ID)
                 .with(csrf())
@@ -84,10 +82,10 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testUpdatePetNotFound() throws Exception {
-        given(this.managementService.findPetById(PET_ID_NOT_FOUND)).willReturn(Optional.empty());
+        given(this.petService.updatePet(eq(PET_ID_NOT_FOUND), any(PetFieldsDto.class)))
+            .willThrow(new IllegalArgumentException("pet not found"));
 
-        PetFieldsDto fieldsDto = createValidFieldsDto();
-        String jsonBody = objectMapper.writeValueAsString(fieldsDto);
+        String jsonBody = objectMapper.writeValueAsString(createValidFieldsDto());
 
         this.mockMvc.perform(put("/api/pets/{id}", PET_ID_NOT_FOUND)
                 .with(csrf())
@@ -100,11 +98,10 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testUpdatePetInvalidType() throws Exception {
-        given(this.managementService.findPetById(PET_ID)).willReturn(Optional.of(pet));
-        given(this.managementService.findPetTypeById(PET_TYPE_ID_INVALID)).willReturn(Optional.empty());
+        given(this.petService.updatePet(eq(PET_ID), any(PetFieldsDto.class)))
+            .willThrow(new IllegalArgumentException("pet type not found"));
 
-        PetFieldsDto fieldsDto = createValidFieldsDto().typeId(PET_TYPE_ID_INVALID);
-        String jsonBody = objectMapper.writeValueAsString(fieldsDto);
+        String jsonBody = objectMapper.writeValueAsString(createValidFieldsDto().typeId(PET_TYPE_ID_INVALID));
 
         this.mockMvc.perform(put("/api/pets/{id}", PET_ID)
                 .with(csrf())
@@ -117,15 +114,15 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testGetPetSuccess() throws Exception {
-        given(this.managementService.findPetById(PET_ID)).willReturn(Optional.of(pet));
+        given(this.petService.findById(PET_ID)).willReturn(Optional.of(pet));
         this.mockMvc.perform(get("/api/pets/{id}", PET_ID).accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk());
     }
-    
+
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testGetPetNotFound() throws Exception {
-        given(this.managementService.findPetById(PET_ID_NOT_FOUND)).willReturn(Optional.empty());
+        given(this.petService.findById(PET_ID_NOT_FOUND)).willReturn(Optional.empty());
         this.mockMvc.perform(get("/api/pets/{id}", PET_ID_NOT_FOUND).accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isNotFound());
     }
@@ -133,25 +130,24 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testGetAllPetsSuccess() throws Exception {
-        given(this.managementService.findAllPets()).willReturn(Collections.singletonList(pet));
+        given(this.petService.findAll()).willReturn(java.util.List.of(pet));
         this.mockMvc.perform(get("/api/pets").accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk());
     }
 
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
-    void testGetAllPetsNotFound() throws Exception {
-        given(this.managementService.findAllPets()).willReturn(Collections.emptyList());
+    void testGetAllPetsEmptyStillOk() throws Exception {
+        given(this.petService.findAll()).willReturn(java.util.List.of());
         this.mockMvc.perform(get("/api/pets").accept(MediaType.APPLICATION_JSON))
-            .andExpect(status().isNotFound());
+            .andExpect(status().isOk());
     }
 
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
-    void testUpdatePetError() throws Exception {
+    void testUpdatePetErrorValidation() throws Exception {
         PetFieldsDto fieldsDto = new PetFieldsDto();
-        fieldsDto.setName(null);
-        
+
         String jsonBody = objectMapper.writeValueAsString(fieldsDto);
         this.mockMvc.perform(put("/api/pets/{id}", PET_ID)
                 .with(csrf())
@@ -164,15 +160,15 @@ class PetRestControllerTests {
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
     void testDeletePetSuccess() throws Exception {
-        given(this.managementService.findPetById(PET_ID)).willReturn(Optional.of(pet));
         this.mockMvc.perform(delete("/api/pets/{id}", PET_ID).with(csrf()).accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isNoContent());
     }
 
     @Test
     @WithMockUser(roles = "OWNER_ADMIN")
-    void testDeletePetError() throws Exception {
-        given(this.managementService.findPetById(PET_ID_NOT_FOUND)).willReturn(Optional.empty());
+    void testDeletePetNotFound() throws Exception {
+        doThrow(new IllegalArgumentException("pet not found")).when(petService).deletePet(PET_ID_NOT_FOUND);
+
         this.mockMvc.perform(delete("/api/pets/{id}", PET_ID_NOT_FOUND).with(csrf()).accept(MediaType.APPLICATION_JSON))
             .andExpect(status().isNotFound());
     }
